结合mybatis的代码

--- a/computeservice/src/main/resources/application.properties
+++ b/computeservice/src/main/resources/application.properties
@@ -1,4 +1,19 @@
-spring.application.name=compute-service
-server.port=2222
+spring.application.name=computeservice
+server.port=8888
+#spring.datasource.driver-class-name: oracle.jdbc.driver.OracleDriver
+#spring.datasource.url: jdbc:oracle:thin:@192.168.2.254:1521:ORCL
+spring.datasource.username: root
+spring.datasource.password: d-123456
+spring.datasource.url=jdbc\:mysql\://cdb-g03u6t9q.bj.tencentcdb.com\:10038/mysql?characterEncoding\=utf8&useSSL\=true
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+mybatis.mapper-locations=classpath:mappings/*.xml
+mybatis.type-aliases-package=com.*.entity
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource  
+spring.datasource.initialSize=5 
+ spring.datasource.minIdle=5  
+spring.datasource.maxActive=20  
+ spring.datasource.maxWait=60000
