--- a/computeservice/pom.xml
+++ b/computeservice/pom.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"	
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.didispace</groupId>
+	<groupId>com.zhangsheng</groupId>
 	<artifactId>computeservice</artifactId>
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
@@ -14,7 +15,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.5.RELEASE</version>
+		<version>1.5.10.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -24,7 +25,16 @@
 	</properties>
 
 	<dependencies>
-		
+		<dependency>			
+		<groupId>org.mybatis.spring.boot</groupId>			
+			<artifactId>mybatis-spring-boot-starter</artifactId>			
+		<version>1.3.0</version>	        
+		</dependency>
+		<dependency>			
+		<groupId>org.mybatis.spring.boot</groupId>
+					<artifactId>mybatis-spring-boot-starter</artifactId>		
+						<version>1.3.0</version>	
+			</dependency>
 			<dependency><!-- 启动 Feign  支持 -->
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-starter-feign</artifactId>
@@ -34,11 +44,6 @@
 				<artifactId>spring-cloud-starter-eureka</artifactId>
 			</dependency>
 	
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-test</artifactId>
-				<scope>test</scope>
-			</dependency>
 			<dependency>  <!-- 启动 前端支持 ，一些常见的前端 插件的添加等 -->
 		    	<groupId>org.webjars</groupId>  
 		    	<artifactId>jquery</artifactId>  
@@ -48,7 +53,7 @@
 	    		<groupId>org.springframework.boot</groupId>
 	    		<artifactId>spring-boot-starter-thymeleaf</artifactId>
 	    	</dependency>
-	    	
+	    	 
 		    <dependency> <!-- 启动 前端框架  bootstrap--> 
 		    	<groupId>org.webjars</groupId>  
 		   	 	<artifactId>bootstrap</artifactId>  
@@ -79,13 +84,24 @@
                 <artifactId>fastjson</artifactId>
                 <version>1.2.16</version>
             </dependency>
-           <!-- https://mvnrepository.com/artifact/com.oracle/ojdbc14 -->
-			 <!-- 添加oracle jdbc driver 
-		    <dependency>    
-		        <groupId>com.oracle</groupId>    
-		        <artifactId>ojdbc14</artifactId>    
-		        <version>10.2.0.2.0</version>
-		    </dependency>-->  
+		    <!-- Spring Boot JDBC --> 
+		    <dependency> 	
+		    	<groupId>org.springframework.boot</groupId>
+		    	<artifactId>spring-boot-starter-jdbc</artifactId>
+		    </dependency>
+   			<!-- https://mvnrepository.com/artifact/com.oracle/ojdbc14 -->
+   			<dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>            
+        <groupId>com.alibaba</groupId>            
+        <artifactId>druid</artifactId>            
+        <version>1.0.29</version>        
+        </dependency>
+
+        
 	</dependencies>
 
 	<dependencyManagement>
@@ -93,7 +109,7 @@
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>Brixton.RELEASE</version>
+				<version>Camden.RELEASE</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
