提交根据不同的环境变量，采用不同的配置代码

--- a/computeservice/src/main/resources/application.properties
+++ b/computeservice/src/main/resources/application.properties
@@ -11,9 +11,12 @@ spring.jpa.show-sql=true
 mybatis.mapper-locations=classpath:mappings/*.xml
 mybatis.type-aliases-package=com.*.entity
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
-
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource  
 spring.datasource.initialSize=5 
- spring.datasource.minIdle=5  
+spring.datasource.minIdle=5  
 spring.datasource.maxActive=20  
- spring.datasource.maxWait=60000
+spring.datasource.maxWait=60000
+spring.session.store-type=jdbc
+## 开发/测试/生产环境分别对应dev/test/prod（很好的帮助我们切换各个环境的配置）
+spring.profiles.active=test
+#logging.level.root = debug
