--- a/computeservice/pom.xml
+++ b/computeservice/pom.xml
@@ -6,7 +6,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 
 	<groupId>com.zhangsheng</groupId>
 	<artifactId>computeservice</artifactId>
-	<version>1.0.0</version>
+	<version>3.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>computeservice</name>
@@ -25,16 +25,21 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	</properties>
 
 	<dependencies>
+		<!-- 启动 如何将session持久化到数据库  支持 -->
+		<dependency>
+
+                 <groupId>org.springframework.session</groupId>
+
+                  <artifactId>spring-session-jdbc</artifactId>
+
+         </dependency>
+		
+		<!-- 启动mybatis 的   支持 -->
 		<dependency>			
 		<groupId>org.mybatis.spring.boot</groupId>			
 			<artifactId>mybatis-spring-boot-starter</artifactId>			
 		<version>1.3.0</version>	        
 		</dependency>
-		<dependency>			
-		<groupId>org.mybatis.spring.boot</groupId>
-					<artifactId>mybatis-spring-boot-starter</artifactId>		
-						<version>1.3.0</version>	
-			</dependency>
 			<dependency><!-- 启动 Feign  支持 -->
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-starter-feign</artifactId>
@@ -85,11 +90,12 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
                 <version>1.2.16</version>
             </dependency>
 		    <!-- Spring Boot JDBC --> 
+		    
 		    <dependency> 	
 		    	<groupId>org.springframework.boot</groupId>
 		    	<artifactId>spring-boot-starter-jdbc</artifactId>
 		    </dependency>
-   			<!-- https://mvnrepository.com/artifact/com.oracle/ojdbc14 -->
+   			<!-- 数据库的连接jar --> 			
    			<dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -106,16 +112,18 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 
 	<dependencyManagement>
 		<dependencies>
+			
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
+				<!--这个有版本问题，使用feign出错 -->
 				<version>Camden.RELEASE</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
+	<!--maven 打包的依赖-->
 	<build>
 		<plugins>
 			<plugin>
