--- a/computeservice/src/main/resources/application.properties
+++ b/computeservice/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=computeservice
-server.port=8888
+server.port=8881
 #spring.datasource.driver-class-name: oracle.jdbc.driver.OracleDriver
 #spring.datasource.url: jdbc:oracle:thin:@192.168.2.254:1521:ORCL
 spring.datasource.username: root
@@ -20,3 +20,6 @@ spring.session.store-type=jdbc
 ## 开发/测试/生产环境分别对应dev/test/prod（很好的帮助我们切换各个环境的配置）
 spring.profiles.active=test
 #logging.level.root = debug
+#hystrix.command.default.execution.timeout.enabled=false
+#hystrix.threadpool.default.coreSize = coreSize
+
