--- a/springBootzs/pom.xml
+++ b/springBootzs/pom.xml
@@ -86,6 +86,16 @@
 		        <groupId>com.oracle</groupId>    
 		        <artifactId>ojdbc14</artifactId>    
 		        <version>10.2.0.2.0</version>
-		    </dependency>-->  
+		    </dependency>--> 
+	
+		     
 	</dependencies>
+<build>
+  			<plugins>
+  				<plugin>
+  				<groupId>org.springframework.boot</groupId>
+ 				<artifactId>spring-boot-maven-plugin</artifactId>
+  				</plugin>
+  			</plugins>
+ </build>
 </project>
